# SqlxTests

./: .gitignore  App.example.toml  Cargo.toml
prisma/: schema.prisma
prisma/migrations/20220103180127_add_todo/: migration.sql
src/: config.rs  database.rs  main.rs
src/models/: user.rs
